[package]
name = "rust_api_prac"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

# MongoDB driver for Rust
mongodb = "2.4"

# Bson library for working with MongoDB BSON types
bson = "2.0"

# Chrono for handling dates and times
chrono = { version = "0.4", features = ["serde"] }

# Futures for handling async streams and utilities (optional, but useful)
futures = "0.3"

# OnceCell for creating static, one-time initialized variables (like the DB instance)
once_cell = "1.18"